--- a/examples/Example1.aspx.html
+++ b/examples/Example1.aspx.html
@@ -29,7 +29,7 @@
 </body> 
 </html>
  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js" type="text/javascript"></script>
- <script src="oystertoad.js" type="text/javascript"></script>
+ <script src="https://rawgit.com/EricRohlfs/OysterToad/master/src/oystertoad.js" type="text/javascript"></script>
 
  
    
